<resources>
    <string name="app_name">ScoutLink</string>
    <string name="nickname_hint">Nickname</string>
    <string name="nickname_not_valid">Nickname is not valid, please enter a different one and try again</string>
    <string name="connect_button">Chat</string>
    <string name="connect_message">Connecting to ScoutLink&#8230;</string>
    <string name="logo_content_description">ScoutLink logo</string>
    <string name="channel_list_on_connect">Show channel list after connecting</string>
    <string name="not_connected">Not connected</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="action_rules">Rules</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_join">Join Channel</string>
    <string name="action_channel_list">Channel List</string>
    <string name="action_channel_settings">Channel Settings</string>
    <string name="channels_section_title">Channels</string>
    <string name="direct_messages_section_title">Direct messages</string>
    <string name="send_message_hint">Type to send a message</string>
    <string name="message_list_no_messages">No messages yet, type below to start chatting!</string>
    <string name="close_server_window">You cannot close the server window!</string>
    <string name="userlist_not_on_channel">This function only works on channels</string>
    <string name="send_message_in_server_window">You cannot send messages to the server window.</string>
    <string name="join_button">Join</string>
    <string name="join_activity_label">Join Channel</string>
    <string name="title_activity_channel_list">Channel List</string>
    <string name="userlist_activity_label">User List</string>
    <string name="action_userlist_query_label">Query</string>
    <string name="action_userlist_notice_label">Notice</string>
    <string name="action_userlist_kill_label">Kill</string>
    <string name="action_userlist_kick_label">Kick</string>
    <string name="action_userlist_op">Op</string>
    <string name="action_userlist_deop">Deop</string>
    <string name="action_userlist_hop">Half-Op</string>
    <string name="action_userlist_dehop">DeHalf-Op</string>
    <string name="action_userlist_owner">Owner</string>
    <string name="action_userlist_deowner">De-Owner</string>
    <string name="action_userlist_admin">Admin</string>
    <string name="action_userlist_deadmin">De-Admin</string>
    <string name="action_userlist_voice">Voice</string>
    <string name="action_userlist_devoice">Devoice</string>
    <string name="activity_invite_title">Invited to Channel</string>
    <string name="invited_to_channel">You have been invited to %1$s, would you like to join?</string>
    <string name="message_halfopevent">%1$s gave halfop to %2$s</string>
    <string name="message_dehalfopevent">%1$s took halfop from %2$s</string>
    <string name="message_opevent">%1$s gave op to %2$s</string>
    <string name="message_deopevent">%1$s took op from %2$s</string>
    <string name="message_superopevent">%1$s gave admin to %2$s</string>
    <string name="message_desuperopevent">%1$s took admin from %2$s</string>
    <string name="message_ownerevent">%1$s gave owner to %2$s</string>
    <string name="message_deownerevent">%1$s took owner from %2$s</string>
    <string name="message_voiceevent">%1$s gave voice to %2$s</string>
    <string name="message_devoiceevent">%1$s took voice from %2$s</string>
    <string name="message_join">%1$s has joined %2$s</string>
    <string name="message_kicked_self">You were kicked from %1$s by %2$s (%3$s)</string>
    <string name="message_kicked_other">%1$s was kicked from %2$s by %3$s (%4$s)</string>
    <string name="message_nickchange">%1$s changed their nick to %2$s</string>
    <string name="message_part">%1$s has left %2$s (%3$s)</string>
    <string name="message_quit">%1$s has left ScoutLink (%2$s)</string>
    <string name="message_version">ScoutLink for Android</string>
    <string name="message_ban_add">%1$s has banned %2$s</string>
    <string name="message_ban_remove">%1$s has unbanned %2$s</string>
    <string name="message_set_private">%1$s has set the channel to private</string>
    <string name="message_unset_private">%1$s has set the channel to public</string>
    <string name="message_set_secret">%1$s has set the channel to secret</string>
    <string name="message_unset_secret">%1$s has set the channel to visible</string>
    <string name="message_set_key">%1$s has set the channel key to %2$s</string>
    <string name="message_unset_key">%1$s has removed the channel key</string>
    <string name="message_set_limit">%1$s has set the channel user limit to %2$s</string>
    <string name="message_unset_limit">%1$s has removed the channel user limit</string>
    <string name="message_set_invite">%1$s has set the channel to invite only</string>
    <string name="message_unset_invite">%1$s has unset invite only mode</string>
    <string name="message_set_moderated">%1$s has enabled moderated mode (only voices and above can talk)</string>
    <string name="message_unset_moderated">%1$s has disabled moderated mode (everyone can talk)</string>
    <string name="message_set_no_external">%1$s has disabled external messages</string>
    <string name="message_unset_no_external">%1$s has enabled external messages</string>
    <string name="message_usermode">%1$s sets mode: %2$s %3$s</string>
    <string name="message_topic">Topic is %1$s (Set by %2$s)</string>
    <string name="message_topic_changed">%1$s changes topic to %2$s</string>
    <string name="message_set_topicprotect">%1$s has enabled topic protection</string>
    <string name="message_unset_topicprotect">%1$s has disabled topic protection</string>
    <string name="message_action">* %1$s</string>
    <string name="message_notice_sender">-%1$s-</string>
    <string name="message_whois_fullhost">%1$s!%2$s@%3$s - %4$s\n</string>
    <string name="message_whois_server">Server: %1$s\n</string>
    <string name="message_whois_away">Away: %1$s\n</string>
    <string name="message_whois_registered">Registered as: %1$s\n</string>
    <string name="message_whois_channels">Channels: %1$s\n</string>
    <string name="message_whois_idle">Idle for: %1$d\n</string>
    <string name="message_join_failed">Cannot join %1$s (%2$s)</string>
    <string name="message_notify_online">%1$s is online</string>
    <string name="message_notify_offline">%1$s is offline</string>
    <string name="message_notify_away">%1$s is away: %2$s</string>
    <string name="message_notify_back">%1$s is no longer away</string>
    <string name="message_notify_added">%1$s was added to notify list</string>
    <string name="message_notify_removed">%1$s was removed from notify list</string>
    <string name="action_kick_dialog_title">Reason for kick</string>
    <string name="action_kill_dialog_title">Reason for kill</string>
    <string name="action_notice_dialog_title">Send a notice</string>
    <string name="settings_category_identity">Identity</string>
    <string name="settings_nickname_label">Nickname</string>
    <string name="settings_nickname_summary">The name which will appear to other users</string>
    <string name="settings_ident_label">Username</string>
    <string name="settings_ident_summary">Appears before the @ in your hostname (username@host)</string>
    <string name="settings_gecos_label">Real Name</string>
    <string name="settings_gecos_summary">Visible to other users via /whois</string>
    <string name="settings_quit_message_label">Quit Message</string>
    <string name="settings_quit_message_summary">This message will be displayed when you disconnect from ScoutLink</string>
    <string name="settings_nickserv_user_label">Nickserv Username</string>
    <string name="settings_nickserv_user_summary">The nickname used to login to NickServ</string>
    <string name="settings_nickserv_password_label">Nickserv Password</string>
    <string name="settings_nickserv_password_summary">The password used to login to NickServ</string>
    <string name="title_activity_log_list">Logs</string>
    <string name="title_activity_log_view">Log view</string>
    <string name="logs_deleted">Logs for %1$s deleted</string>
    <string name="no_logs_to_view">There are no logs to view</string>
    <string name="log_action_delete">Delete</string>
    <string name="log_action_export">Export</string>
    <string name="log_exported">Log file exported to %1$s</string>
    <string name="error_exporting_logs">Error exporting log file</string>
    <string name="settings_category_logging">Logging</string>
    <string name="settings_enable_logging">Enable logging</string>
    <string name="settings_load_previous_messages_on_join_label">Load previous messages on join</string>
    <string name="settings_load_previous_messages_on_join_summary">Shows previous messages from the channel when you join</string>
    <string name="title_activity_list_view_edit">Edit List</string>
    <string name="edit_list_remove_item_confirm_title">Remove Item?</string>
    <string name="edit_list_remove_item_confirm_text">Are you sure you want to remove this item?</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_autojoin_channels_label">Autojoin Channels</string>
    <string name="settings_autojoin_channels_summary">Channels to autojoin on connect</string>
    <string name="settings_command_on_connect_label">Run commands on connect</string>
    <string name="settings_command_on_connect_summary">Commands to be run on connect</string>
    <string name="settings_notify_list_label">Notify List</string>
    <string name="settings_notify_list_summary">Get notified when users are online</string>
    <string name="settings_use_secure_connection">Use secure connection</string>
    <string name="settings_use_secure_connection_summary">Encrypts all traffic between you and the server</string>
    <string name="title_activity_channel_settings">Channel Settings</string>
    <string name="title_activity_rules">Rules</string>
    <string name="view_rules_dialog_title">View Rules?</string>
    <string name="view_rules_dialog_message">Before you get started, would you like to read the ScoutLink rules? (You can view these at any time by selecting "Rules" from the menu)</string>
    <string name="channel_settings_external_messages">Block external messages</string>
    <string name="channel_settings_topic_protection">Enable topic protection</string>
    <string name="channel_settings_private">Private</string>
    <string name="channel_settings_secret">Secret</string>
    <string name="channel_settings_invite_only">Invite only</string>
    <string name="channel_settings_moderated">Moderated</string>
    <string name="channel_settings_limit">User limit</string>
    <string name="channel_limit_set">Set</string>
    <string name="channel_limit_remove">Remove</string>
    <string name="channel_key_set">Set</string>
    <string name="channel_key_remove">Remove</string>
    <string name="channel_settings_key">Password</string>
    <string name="channel_settings_topic_change">Change</string>
    <string name="channel_settings_need_op">You must be an op to change channel settings</string>
    <string name="channel_settings_not_channel">You can only change settings in channels</string>
    <string name="default_quit_message">ScoutLink for Android!</string>
    <string name="nick_already_in_use">This nickname is already in use, please select a different nickname and try again.</string>
    <string name="notification_connected">Connected as %1$s.</string>
    <string name="settings_topic_hint">Channel Topic</string>
    <string name="edit_list_add_button">Add</string>
    <string name="edit_list_save_button">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="block_user">Block</string>
    <string name="unblock_user">Unblock</string>
</resources>