<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_kick_label" android:id="@+id/action_userlist_kick"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_op" android:id="@+id/action_userlist_op"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_deop" android:id="@+id/action_userlist_deop"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_hop" android:id="@+id/action_userlist_hop"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_dehop" android:id="@+id/action_userlist_dehop"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_owner" android:id="@+id/action_userlist_owner"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_deowner" android:id="@+id/action_userlist_deowner"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_admin" android:id="@+id/action_userlist_admin"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_deadmin" android:id="@+id/action_userlist_deadmin"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_voice" android:id="@+id/action_userlist_voice"/>
    <item app:showAsAction="ifRoom" android:title="@string/action_userlist_devoice" android:id="@+id/action_userlist_devoice"/>
</menu>