<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.org.mattford.scoutlink.activity.ChannelSettingsActivity"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_topic"
            android:layout_weight="1"

            />
        <Button
            android:id="@+id/settings_topic_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_settings_topic_change"/>

        </LinearLayout>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_settings_external_messages"
        android:id="@+id/settings_no_external" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_settings_topic_protection"
        android:id="@+id/settings_topic_protection" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_settings_private"
        android:id="@+id/settings_private" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_settings_secret"
        android:id="@+id/settings_secret" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_settings_moderated"
        android:id="@+id/settings_moderated" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_settings_invite_only"
        android:id="@+id/settings_invite_only" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/channel_limit"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/channel_settings_limit"
        />
    <Button
        android:id="@+id/channel_limit_set"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/channel_limit_set"></Button>
    <Button
        android:id="@+id/channel_limit_remove"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/channel_limit_remove"></Button>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/channel_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/channel_settings_key"
            />
        <Button
            android:id="@+id/channel_key_set"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/channel_key_set"></Button>
        <Button
            android:id="@+id/channel_key_remove"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/channel_key_remove"></Button>

    </LinearLayout>

</LinearLayout>
